[project]
name = "crypto-momentum-sell-monitor"
version = "0.2.0"
description = "Momentum-based sell signal monitor for crypto assets using composite technical indicators with time-decaying thresholds."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.scripts]
steth-monitor = "sell_monitor:main"
